@@ -1,1 +1,1 @@
-#define SERNO "20061119-7245"
+#define SERNO "20061120-7247"
